# Leafhub

./: .gitignore  LICENSE  README.md  install.cmd  install.ps1  install.sh  pyproject.toml  register.sh  setup.sh
.github/workflows/: ci.yml
docs/: INSTALLER-MAINTENANCE.md
scripts/: check_env.py
sdk-pkg/: README.md  pyproject.toml
sdk-pkg/leafhub_sdk/: __init__.py  manifest.py  probe.py  resolve.py
sdk-pkg/tests/: test_integration.py  test_manifest.py  test_probe.py  test_resolve.py
src/leafhub/: INSTALLER-MAINTENANCE.md  LEAFHUB.md  __init__.py  __main__.py  cli.py  errors.py  probe.py  register.sh  sdk.py  setup_template.sh
src/leafhub/core/: __init__.py  crypto.py  db.py  oauth.py  store.py
src/leafhub/manage/: auth.py  projects.py  providers.py  server.py
src/leafhub/scaffold/: __init__.py  generators.py
tests/: test_bind_wizard.py  test_e2e.py  test_full_flow.py  test_new_features.py  test_phase2_cli.py  test_probe_integration.py  test_register_flow.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.vue  api.js  main.js  presets.js  router.js
ui/src/views/: ProjectsView.vue  ProvidersView.vue
