[build-system]
requires      = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name            = "leafhub"
version         = "0.1.0"
description     = "Local encrypted API key vault for LLM projects"
requires-python = ">=3.11"

dependencies = [
    "cryptography>=42",   # AES-256-GCM
    "keyring>=25",        # system Keychain (optional, graceful degradation)
]

[project.optional-dependencies]
manage = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=8",
    "httpx>=0.27",          # FastAPI TestClient transport
    "pytest-asyncio>=0.23", # asyncio test plugin (used by anyio/httpx internals)
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[project.scripts]
leafhub = "leafhub.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
